syntax = "proto3";

import "GRPC/Protos/base.proto";
import "GRPC/Protos/tarefa.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Cpnucleo.Infra.CrossCutting.Communication.GRPC.Protos";

package apontamento;

service Apontamento {

	rpc Incluir (ApontamentoModel) returns (base.BaseReply);
	rpc Listar (google.protobuf.Empty) returns (stream ApontamentoModel);
	rpc Consultar (base.BaseRequest) returns (ApontamentoModel);
	rpc Alterar (ApontamentoModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
}

message ApontamentoModel {

	string Id = 1;
	string Descricao = 2;
	string DataApontamento = 3;
	int32 QtdHoras = 4;
	int32 PercentualConcluido = 5;
	string IdTarefa = 6;
	string IdRecurso = 7;
	string DataInclusao = 8;
	tarefa.TarefaModel Tarefa = 9;
}